Fixing some spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,20 @@ body {
   font-size: 15px;
   background-color: var(--mainBackground);
 }
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    
+  }
+  
+  .column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+  }
 .card {
   background-color: var(--cardBackground);
   border-radius: 10px;
@@ -25,12 +39,13 @@ body {
   align-items: center;
   justify-content: center;
   min-width: 250px;
-  margin: 40px 15px;
-  padding: 1rem;
+  
 }
 .card-content > h1 {
   font-family: "Inter", sans-serif;
   color: var(--mainHeading);
+  padding:0 3rem;
+  padding-top: 3rem;
 }
 .card-content > h1 > span {
   color: var(--accent);
@@ -38,12 +53,19 @@ body {
 .card-content > p {
   font-family: "Lexend Deca", sans-serif;
   color: var(--mainParagraph);
+  padding:0 3rem;
+}
+.stats{
+    padding:0 3rem;   
+    max-width: 80%;
+    padding-bottom: 3rem;
 }
 .stat {
   margin-top: 2rem;
   font-family: "Lexend Deca", sans-serif;
   color: var(--mainParagraph);
   text-transform: uppercase;
+  
 }
 .stat > span {
   font-family: "Inter", sans-serif;
@@ -51,19 +73,7 @@ body {
   font-weight: 600;
   color: var(--mainHeading);
 }
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-}
 
-.column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-}
 picture {
   width: 100%;
   height: 100%;
@@ -99,6 +109,7 @@ picture {
     text-align: center;
   }
   .stats {
+      width: 100%;
     flex-direction: column;
   }
 }
